# Agents_Automations

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Informe_SEO_TopDoctors_ES.docx  README.md  build_topdoctors_report.py  propuesta-orchestrator-v4.4.ts
automations/seo-optimizer/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SECRETS.md  pyproject.toml  railway.toml
automations/seo-optimizer/01-database-migrations/: 001_seo_optimizer_schema.sql  002_seo_optimizer_views.sql  003_seo_optimizer_cron.sql  004_seo_optimizer_outbox_reuse.sql  005_seo_optimizer_client_config.sql  006_seo_optimizer_migrate_to_edge_functions.sql  007_expose_schema_to_postgrest.sql
automations/seo-optimizer/02-agents/: app.py
automations/seo-optimizer/02-agents/_shared/: __init__.py  gsc_api.py  html_utils.py  llm_client.py  orbit.py  run_events.py  scoring.py  secret.py  slack_blockkit.py  supabase_client.py
automations/seo-optimizer/02-agents/analyst/: handler.py  topn_selector.py  types.py
automations/seo-optimizer/02-agents/article_ingestor/: handler.py
automations/seo-optimizer/02-agents/dispatcher/: handler.py
automations/seo-optimizer/02-agents/gsc_ingestor/: handler.py
automations/seo-optimizer/02-agents/orchestrator/: handler.py
automations/seo-optimizer/02-agents/outbox_worker/: handler.py
automations/seo-optimizer/02-agents/reeval/: handler.py
automations/seo-optimizer/handoff/: 00-data-flow.md  01-agent-contracts.md  02-validation-checklist.md  03-runbook.md  04-frontend-superprompt.md  05-PENDING.md
automations/seo-optimizer/supabase/: config.toml
(+331 files in other folders)
