[project]
name = "seo-optimizer"
version = "0.1.0"
description = "Optimización ofensiva mensual de artículos basada en GSC + LLM con loop de aprobación SEO"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",

    # Supabase
    "supabase>=2.9.0",
    "postgrest>=0.17.0",

    # Google APIs (GSC)
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.150.0",

    # LLM
    "anthropic>=0.39.0",
    "httpx>=0.27.0",

    # HTML / NLP
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "snowballstemmer>=2.2.0",
    "nltk>=3.9.0",

    # Diff
    "diff-match-patch>=20230430",

    # Slack
    "slack-sdk>=3.33.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",  # retries
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["03-tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
